fix error for run in different evn